--- a/cellmap.1.0.beta.plist
+++ b/cellmap.1.0.beta.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://www.cellmap.cn/download/cellmap.ipa</string>
+                    <string>http://sz-btfs.yun.ftn.qq.com/ftn_handler/20e1b258e7775bd6a87ba7d713dc33f59c083ff4abab82ec0f88f722eacefffd/?fname=cellmap.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
