--- a/cellmap.1.0.beta.plist
+++ b/cellmap.1.0.beta.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://sz-btfs.yun.ftn.qq.com/ftn_handler/861348d9990a62f827d6f3af861cc6e9c18e0e99ef13089309a91bc6aa06e6f5/?fname=cellmap.ipa</string>
+                    <string>http://www.cellmap.cn/download/cellmap.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
